extended forecast card container width fixed, tooltips moved, windowWidth handler sent to app.  background image on mobile made smaller

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -52,9 +52,10 @@ html {
   position: fixed;
   z-index: -1;
   left: 0;
-  top: -100px;
+  top: 0px;
   opacity: 0.15;
   width: 100%;
+  height: 100%;
 }
 
 @media only screen and (max-width: 450px) {
